--- a/jour5/projet_web/views/about.html
+++ b/jour5/projet_web/views/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/jour5/projet_web/public/styles.css">
     <title>À propos</title>
 </head>
 <body>
